--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.11.0",
     "react-imask": "^7.1.3",
+    "react-loader-spinner": "^6.1.0",
     "react-redux": "^9.0.2",
     "react-scripts": "5.0.1",
     "redux": "^5.0.0",
